--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "swiper": "^11.2.8"
   }
 }
