--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.8"
   }
